Update systray icon even when not in a panel containment. This is usefull when using systray widget outside a panel.

BUG: 308722
FIXED-IN: 0.9.0.6